--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <HR WIDTH="100%">
 
 <CENTER><H1><A NAME="intro"></A>Introduzione</H1></CENTER>
-    La Prefettura di Avellino Ufficio Territoriale del Governo Area V – Protezione Civile Difesa Civile e Coordinamento del Soccorso Pubblico
+    La Prefettura di Avellino Ufficio Territoriale del Governo Area V â€“ Protezione Civile Difesa Civile e Coordinamento del Soccorso Pubblico
 <BR>decretava il 18 gennaio 2012 con Circolare Prefettizia n.1039/2012 l'istituzione dei seguenti centri operativi misti:
 <BR>
 <BR>   C.O.M. n. 1 Altavilla Irpina
@@ -41,7 +41,7 @@
 <BR>   C.O.M. n. 14 Montella
 <BR>   C.O.M. n. 15 Montemiletto
 <BR>   C.O.M. n. 16 San Mango sul Calore
-<BR>   C.O.M. n. 17 Sant’Angelo dei Lombardi
+<BR>   C.O.M. n. 17 Santâ€™Angelo dei Lombardi
 <BR>   C.O.M. n. 18 Serino
 <BR>   C.O.M. n. 19 Solofra
 <BR>   C.O.M. n. 20 Vallata
@@ -69,7 +69,7 @@
     Bla bla bla bla bla bla bla bla bla
     <A NAME="parola_chiave_4"></A>
     <FONT COLOR="#FF0000">parola_chiave_4</FONT> bla bla
-<BR><a href="https://mimmogh.github.io/Hirpinia-VHF-Radio-Network/Copertura 10W ERP IR8AI Trevico/IR8AI.html" title="Decreto Prot. n.1039/2012 - 18 gennaio 2012 ">Decreto Prot. n.1039/2012 - 18 gennaio 2012</a>
+<BR><a href="https://mimmogh.github.io/Hirpinia-VHF-Radio-Network/Copertura 10W ERP IR8AI Trevico/IR8AI.html" title="Copertura 10W ERP IR8AI Trevico">Copertura 10W ERP IR8AI Trevico</a>
 <BR>
 <BR><a href="http://93.57.71.19/AREA_DOC_PROT_CIV/ARCHIVIO/decreto-nuovi-com.pdf" title="Decreto Prot. n.1039/2012 - 18 gennaio 2012 ">Decreto Prot. n.1039/2012 - 18 gennaio 2012</a>
 <BR>
