--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <FONT COLOR="#FF0000">parola_chiave_4</FONT> bla bla
 <BR><a href="https://mimmogh.github.io/Hirpinia-VHF-Radio-Network/Copertura 10W ERP IR8AI Trevico/IR8AI.html" title="Copertura 10W ERP IR8AI Trevico">Copertura 10W ERP IR8AI Trevico</a>
 <BR>
-<BR><a href="https://mimmogh.github.io/Hirpinia-VHF-Radio-Network/Copertura 10W ERP IR8E Monte Tuoro R5/IR8E.html" title="Copertura 10W ERP IR8E Monte Tuoro">Copertura 10W ERP IR8E Monte Tuor</a>
+<BR><a href="https://mimmogh.github.io/Hirpinia-VHF-Radio-Network/Copertura 10W ERP IR8E Monte Tuoro R5/IR8E.html" title="Copertura 10W ERP IR8E Monte Tuoro">Copertura 10W ERP IR8E Monte Tuoro</a>
 <BR>
 <BR><a href="http://93.57.71.19/AREA_DOC_PROT_CIV/ARCHIVIO/decreto-nuovi-com.pdf" title="Decreto Prot. n.1039/2012 - 18 gennaio 2012 ">Decreto Prot. n.1039/2012 - 18 gennaio 2012</a>
 
