--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 <BR>
 <BR><a href="https://mimmogh.github.io/Hirpinia-VHF-Radio-Network/Copertura 10W ERP IR8E Monte Tuoro R5/IR8E.html" title="Copertura 10W ERP IR8E Monte Tuoro">Copertura 10W ERP IR8E Monte Tuoro</a>
 <BR>
-<BR><a href="http://93.57.71.19/AREA_DOC_PROT_CIV/ARCHIVIO/decreto-nuovi-com.pdf" title="Decreto Prot. n.1039/2012 - 18 gennaio 2012 ">Decreto Prot. n.1039/2012 - 18 gennaio 2012</a>
+<BR><a href="https://mimmogh.github.io/Hirpinia-VHF-Radio-Network/Copertura 50 W Prefettura/Prefettura.html" title="Copertura 50 W Prefettura">Copertura 50 W Prefettura</a>
 
     <A NAME="parola_chiave_5"></A>
     <FONT COLOR="#FF0000">parola_chiave_5</FONT> bla bla bla bla bla bla bla bla
