--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     Bla bla bla bla bla bla bla bla bla
     <A NAME="parola_chiave_4"></A>
     <FONT COLOR="#FF0000">parola_chiave_4</FONT> bla bla
-<BR>bla bla bla bla bla bla bla bla bla bla bla bla
+<BR><a href="https://mimmogh.github.io/Hirpinia-VHF-Radio-Network/Link COM - Ripetitori/IR8E/C.O.M. n. 12 Mercogliano/Radio Mobile Online.pdf" title="Copertura 50 W Prefettura">Copertura 50 W Prefettura</a>
 <BR>bla bla bla bla bla bla bla bla bla bla bla bla bla
 <BR>bla bla bla bla bla bla bla bla bla
 <BR>bla bla bla bla bla bla bla bla bla
