--- a/index.html
+++ b/index.html
@@ -90,10 +90,10 @@
     <A NAME="parola_chiave_4"></A>
     <FONT COLOR="#FF0000">parola_chiave_4</FONT> bla bla
 <BR><a href="https://mimmogh.github.io/Hirpinia-VHF-Radio-Network/Link COM - Ripetitori/IR8E/C.O.M. n. 12 Mercogliano/Radio Mobile Online.pdf" title="IR8E/C.O.M. n. 12 Mercogliano">IR8E/C.O.M. n. 12 Mercogliano</a>
-<BR>bla bla bla bla bla bla bla bla bla bla bla bla bla
-<BR>bla bla bla bla bla bla bla bla bla
-<BR>bla bla bla bla bla bla bla bla bla
-<BR>bla
+<BR>
+<BR><a href="https://mimmogh.github.io/Hirpinia-VHF-Radio-Network/Link COM - Ripetitori/IR8E/C.O.M. n. 12 Mercogliano/Radio Mobile Online.pdf" title="IR8E/C.O.M. n. 12 Mercogliano">IR8E/C.O.M. n. 12 Mercogliano</a>
+<BR>
+<BR><a href="https://mimmogh.github.io/Hirpinia-VHF-Radio-Network/Link COM - Ripetitori/IR8E/C.O.M. n. 12 Mercogliano/Radio Mobile Online.pdf" title="IR8E/C.O.M. n. 12 Mercogliano">IR8E/C.O.M. n. 12 Mercogliano</a>
     <A NAME="parola_chiave_5"></A>
     <FONT COLOR="#FF0000">parola_chiave_5</FONT> bla bla bla bla bla bla bla bla
 <BR>bla bla bla bla bla bla bla bla bla bla
