--- a/index.html
+++ b/index.html
@@ -97,7 +97,11 @@
 <BR>
 <BR><a href="https://mimmogh.github.io/Hirpinia-VHF-Radio-Network/Link COM - Ripetitori/IR8E/C.O.M. n. 16 San Mango sul Calore/Radio Mobile Online.pdf" title="IR8E/C.O.M. n. 16 San Mango sul Calore">IR8E/C.O.M. n. 16 San Mango sul Calore</a>    
 <BR>
-<BR><a href="https://mimmogh.github.io/Hirpinia-VHF-Radio-Network/Link COM - Ripetitori/IR8E/C.O.M. n. 17 Sant’Angelo dei Lombardi/Radio Mobile Online.pdf" title="C.O.M. n. 17 Sant’Angelo dei Lombardi">IR8E/C.O.M. n. 17 Sant’Angelo dei Lombardi</a>   
+<BR><a href="https://mimmogh.github.io/Hirpinia-VHF-Radio-Network/Link COM - Ripetitori/IR8E/C.O.M. n. 17 Sant’Angelo dei Lombardi/Radio Mobile Online.pdf" title="C.O.M. n. 17 Sant’Angelo dei Lombardi">IR8E/C.O.M. n. 17 Sant’Angelo dei Lombardi</a>
+<BR>
+<BR><a href="https://mimmogh.github.io/Hirpinia-VHF-Radio-Network/Link COM - Ripetitori/IR8E/C.O.M. n. 19 Solofra/Radio Mobile Online.pdf" title="C.O.M. n. 19 Solofra">IR8E/C.O.M. n. 19 Solofra</a>   
+<BR>
+<BR>
     <A NAME="parola_chiave_5"></A>
     <FONT COLOR="#FF0000">parola_chiave_5</FONT> bla bla bla bla bla bla bla bla
 <BR>bla bla bla bla bla bla bla bla bla bla
