--- a/index.html
+++ b/index.html
@@ -101,7 +101,52 @@
 <BR>
 <BR><a href="https://mimmogh.github.io/Hirpinia-VHF-Radio-Network/Link COM - Ripetitori/IR8E/C.O.M. n. 19 Solofra/Radio Mobile Online.pdf" title="C.O.M. n. 19 Solofra">IR8E/C.O.M. n. 19 Solofra</a>   
 <BR>
+<BR><a href="https://mimmogh.github.io/Hirpinia-VHF-Radio-Network/Link COM - Ripetitori/IR8E/C.O.M. n. 2 Ariano Irpino/Radio Mobile Online.pdf" title="C.O.M. n. 2 Ariano Irpino">IR8E/C.O.M. n. 2 Ariano Irpino</a>   
 <BR>
+<BR>
+    <A NAME="parola_chiave_5"></A>
+    <FONT COLOR="#FF0000">parola_chiave_5</FONT> bla bla bla bla bla bla bla bla
+<BR>bla bla bla bla bla bla bla bla bla bla
+<BR>bla bla bla bla bla bla bla bla bla bla bla bla
+<BR>bla bla bla bla bla bla bla bla bla bla bla bla bla
+<BR>bla bla bla bla bla bla bla
+<BR>(<I>torna all'<A HREF="#Indice">indice</A></I>)
+<BR>
+<HR WIDTH="100%">
+
+<CENTER><H1><A NAME="Terzo"></A>Capitolo Terzo</H1></CENTER>
+    Bla bla bla bla bla bla bla bla
+<BR>bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla
+<BR>bla bla bla bla bla bla bla bla bla bla bla
+<BR>bla bla bla bla bla bla bla bla bla bla bla bla bla bla
+<BR>bla
+    <A NAME="parola_chiave_6"></A>
+    <FONT COLOR="#FF0000">parola_chiave_6</FONT>
+    bla bla bla bla bla bla bla
+    <A NAME="parola_chiave_7"></A>
+    <FONT COLOR="#FF0000">parola_chiave_7</FONT> bla bla
+<BR>bla bla bla bla bla bla bla bla bla bla bla
+<BR>bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla
+<BR>bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla
+<BR>bla bla bla
+<BR>(<I>torna all'<A HREF="#Indice">indice</A></I>)
+<BR>
+<HR WIDTH="100%">
+
+<CENTER><H1><A NAME="Analitico"></A>Indice Analitico</H1></CENTER>
+    <A HREF="#parola_chiave_1">parola_chiave_1</A>
+<BR><A HREF="#parola_chiave_2">parola_chiave_2</A>
+<BR><A HREF="#parola_chiave_3">parola_chiave_3</A>
+<BR><A HREF="#parola_chiave_4">parola_chiave_4</A>
+<BR><A HREF="#parola_chiave_5">parola_chiave_5</A>
+<BR><A HREF="#parola_chiave_6">parola_chiave_6</A>
+<BR><A HREF="#parola_chiave_7">parola_chiave_7</A>
+
+<P>(<I>torna all'<A HREF="#Indice">indice</A></I>)
+<BR>
+</BODY>
+</HTML>
+
     <A NAME="parola_chiave_5"></A>
     <FONT COLOR="#FF0000">parola_chiave_5</FONT> bla bla bla bla bla bla bla bla
 <BR>bla bla bla bla bla bla bla bla bla bla
