--- a/index.html
+++ b/index.html
@@ -103,7 +103,10 @@
 <BR>
 <BR><a href="https://mimmogh.github.io/Hirpinia-VHF-Radio-Network/Link COM - Ripetitori/IR8E/C.O.M. n. 2 Ariano Irpino/Radio Mobile Online.pdf" title="C.O.M. n. 2 Ariano Irpino">IR8E/C.O.M. n. 2 Ariano Irpino</a>   
 <BR>
+<BR><a href="https://mimmogh.github.io/Hirpinia-VHF-Radio-Network/Link COM - Ripetitori/IR8E/C.O.M. n. 4 Avellino/Radio Mobile Online.pdf" title="C.O.M. n. 4 Avellino">IR8E/C.O.M. n. 4 Avellino</a> 
 <BR>
+<BR><a href="https://mimmogh.github.io/Hirpinia-VHF-Radio-Network/Link COM - Ripetitori/IR8E/C.O.M. n. 6 Calitri/Radio Mobile Online.pdf" title="C.O.M. n. 6 Calitri">IR8E/C.O.M. n. 6 Calitri</a>    
+   
     <A NAME="parola_chiave_5"></A>
     <FONT COLOR="#FF0000">parola_chiave_5</FONT> bla bla bla bla bla bla bla bla
 <BR>bla bla bla bla bla bla bla bla bla bla
