--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <BR>
 <a href="http://93.57.71.19/AREA_DOC_PROT_CIV/ARCHIVIO/allegato-nuovi-com.pdf" title="Decreto Prot. n.1039/2012 - 18 gennaio 2012 ">allegato nuovi COM Decreto Prot. n.1039/2012 - 18 gennaio 2012</a>
 <BR>
-<BR>
+<a href="https://mimmogh.github.io/Hirpinia-VHF-Radio-Network/Tavola COM e COC.pdf" title="Tavola COM e COC">Tavola COM e COC</a>
 <BR>
 <BR>
 <BR>
