--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <FONT COLOR="#FF0000">parola_chiave_4</FONT> bla bla
 <BR><a href="https://mimmogh.github.io/Hirpinia-VHF-Radio-Network/Link COM - Ripetitori/IR8E/C.O.M. n. 12 Mercogliano/Radio Mobile Online.pdf" title="IR8E/C.O.M. n. 12 Mercogliano">IR8E/C.O.M. n. 12 Mercogliano</a>
 <BR>
-<BR><a href="https://mimmogh.github.io/Hirpinia-VHF-Radio-Network/Link COM - Ripetitori/IR8E/C.O.M. n. 13 Mirabella Eclano/Radio Mobile Online.pdf" title="IR8E/C.O.M. n. 12 Mercogliano">IR8E/C.O.M. n. 12 Mercogliano</a>
+<BR><a href="https://mimmogh.github.io/Hirpinia-VHF-Radio-Network/Link COM - Ripetitori/IR8E/C.O.M. n. 13 Mirabella Eclano/Radio Mobile Online.pdf" title="IR8E/C.O.M. n. 13 Mirabella Eclano">IR8E/C.O.M. n. 13 Mirabella Eclano</a>
 <BR>
 <BR><a href="https://mimmogh.github.io/Hirpinia-VHF-Radio-Network/Link COM - Ripetitori/IR8E/C.O.M. n. 14 Montella/Radio Mobile Online.pdf" title="IR8E/C.O.M. n. 14 Montella">IR8E/C.O.M. n. 14 Montella</a>
 <BR>
