--- a/index.html
+++ b/index.html
@@ -46,29 +46,29 @@
 <BR>   C.O.M. n. 19 Solofra
 <BR>   C.O.M. n. 20 Vallata
 <BR>
+<BR> Si riportano la Circolare Prefettizia n.1039/2012, l'allegato della Circolare con articolazione COM/COC e relativa mappa provinciale.
+<BR>
+<BR>
 <BR><a href="http://93.57.71.19/AREA_DOC_PROT_CIV/ARCHIVIO/decreto-nuovi-com.pdf" title="Decreto Prot. n.1039/2012 - 18 gennaio 2012 ">Decreto Prot. n.1039/2012 - 18 gennaio 2012</a>
 <BR>
 <BR>
 <a href="http://93.57.71.19/AREA_DOC_PROT_CIV/ARCHIVIO/allegato-nuovi-com.pdf" title="Decreto Prot. n.1039/2012 - 18 gennaio 2012 ">allegato nuovi COM Decreto Prot. n.1039/2012 - 18 gennaio 2012</a>
 <BR>
+<BR>
 <a href="https://mimmogh.github.io/Hirpinia-VHF-Radio-Network/Tavola COM e COC.pdf" title="Tavola COM e COC">Tavola COM e COC</a>
 <BR>
 <BR>
+<BR><iframe src="https://www.google.com/maps/d/u/0/embed?mid=1ePpS04y813t0qOghG_SjbrIr7vQK9HEK" width="640" height="480"></iframe>
 <BR>
 <BR>
-    <A NAME="parola_chiave_3"></A>
-    <FONT COLOR="#FF0000">parola_chiave_3</FONT> bla bla
-<BR>bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla
-<BR>bla bla bla bla bla bla bla bla bla bla bla bla
-<BR>bla bla bla bla bla bla bla bla bla bla bla bla bla
 <BR>(<I>torna all'<A HREF="#Indice">indice</A></I>)
 <BR>
 <HR WIDTH="100%">
 
 <CENTER><H1><A NAME="Primo"></A>Capitolo Primo - Coperture Ripetitori Attivi e Sala Radio Prefettura</H1></CENTER>
-    Bla bla bla bla bla bla bla bla bla
-    <A NAME="parola_chiave_4"></A>
-    <FONT COLOR="#FF0000">parola_chiave_4</FONT> bla bla
+<BR>
+<BR>   
+<BR>
 <BR><a href="https://mimmogh.github.io/Hirpinia-VHF-Radio-Network/Copertura 10W ERP IR8AI Trevico/IR8AI.html" title="Copertura 10W ERP IR8AI Trevico">Copertura 10W ERP IR8AI Trevico</a>
 <BR>
 <BR><a href="https://mimmogh.github.io/Hirpinia-VHF-Radio-Network/Copertura 10W ERP IR8E Monte Tuoro R5/IR8E.html" title="Copertura 10W ERP IR8E Monte Tuoro">Copertura 10W ERP IR8E Monte Tuoro</a>
