--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
 <BR>
 <BR><iframe src="https://www.google.com/maps/d/u/0/embed?mid=1ePpS04y813t0qOghG_SjbrIr7vQK9HEK" width="640" height="480"></iframe>
 <BR>
+<BR>Alcuni COM riportati in una mappa di Google.....
 <BR>
 <BR>(<I>torna all'<A HREF="#Indice">indice</A></I>)
 <BR>
@@ -67,7 +68,10 @@
 
 <CENTER><H1><A NAME="Primo"></A>Capitolo Primo - Coperture Ripetitori Attivi e Sala Radio Prefettura</H1></CENTER>
 <BR>
-<BR>   
+<BR>Allo scopo di valutare evidenti eventuali criticità relative alla coperture dei territori sedi dei COM da parte dei Ripetitori attivi , si è provveduto a realizzare una serie 
+<BR>di verifiche attraverso la piattaforma Radio Mobile on line di 
+<BR>
+<BR>
 <BR>
 <BR><a href="https://mimmogh.github.io/Hirpinia-VHF-Radio-Network/Copertura 10W ERP IR8AI Trevico/IR8AI.html" title="Copertura 10W ERP IR8AI Trevico">Copertura 10W ERP IR8AI Trevico</a>
 <BR>
