--- a/index.html
+++ b/index.html
@@ -68,10 +68,12 @@
 
 <CENTER><H1><A NAME="Primo"></A>Capitolo Primo - Coperture Ripetitori Attivi e Sala Radio Prefettura</H1></CENTER>
 <BR>
-<BR>Allo scopo di valutare evidenti eventuali criticità relative alla coperture dei territori sedi dei COM da parte dei Ripetitori attivi , si è provveduto a realizzare una serie 
-<BR>di verifiche attraverso la piattaforma Radio Mobile on line di 
+<BR>Allo scopo di evidenziare eventuali criticità relative alla coperture dei territori sedi dei COM da parte dei Ripetitori attivi , si è provveduto a realizzare una serie 
+<BR>di verifiche teoriche attraverso la piattaforma Radio Mobile on line by VE2DBE.
 <BR>
-<BR>
+<BR>Di seguito la reportistica per IR8AI Trevico 10W EIRP , IR8E Monte Tuoro 10W EIRP , Radio Prefettura 50W TX.
+<BR>  
+<BR> 
 <BR>
 <BR><a href="https://mimmogh.github.io/Hirpinia-VHF-Radio-Network/Copertura 10W ERP IR8AI Trevico/IR8AI.html" title="Copertura 10W ERP IR8AI Trevico">Copertura 10W ERP IR8AI Trevico</a>
 <BR>
