--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <UL>
   <LI><A HREF="#intro">Introduzione</A></LI>
   <LI><A HREF="#Primo">Capitolo Primo - Coperture Ripetitori Attivi e Sala Radio Prefettura</A></LI>
-  <LI><A HREF="#Secondo">Capitolo Secondo</A></LI>
+  <LI><A HREF="#Secondo">Capitolo Secondo - Verifica collegamenti Ripetitori attivi - COM</A></LI>
   <LI><A HREF="#Terzo">Capitolo Terzo</A></LI>
   <LI><A HREF="#Analitico">Indice Analitico</A></LI>
 </UL>
@@ -89,7 +89,7 @@
 <BR>
 <HR WIDTH="100%">
 
-<CENTER><H1><A NAME="Secondo"></A>Capitolo Secondo</H1></CENTER>
+<CENTER><H1><A NAME="Secondo"></A>Capitolo Secondo - Verifica collegamenti Ripetitori attivi - COM </H1></CENTER>
     Bla bla bla bla bla bla bla bla bla
     <A NAME="parola_chiave_4"></A>
     <FONT COLOR="#FF0000">parola_chiave_4</FONT> bla bla
