--- a/index.html
+++ b/index.html
@@ -69,7 +69,14 @@
 <CENTER><H1><A NAME="Primo"></A>Capitolo Primo - Coperture Ripetitori Attivi e Sala Radio Prefettura</H1></CENTER>
 <BR>
 <BR>Allo scopo di evidenziare eventuali criticità relative alla coperture dei territori sedi dei COM da parte dei Ripetitori attivi , si è provveduto a realizzare una serie 
-<BR>di verifiche teoriche attraverso la piattaforma Radio Mobile on line by VE2DBE.
+<BR>di verifiche teoriche attraverso la piattaforma Radio Mobile on line by VE2DBE 
+<BR>
+<BR><a href="https://www.ve2dbe.com/rmonline_s.asp" title="Radio Mobile Online" title="Radio Mobile Online">Radio Mobile Online</a>
+<BR>    
+<BR>Radio Mobile Online is a radio wave propagation prediction tool dedicated to amateur radio.
+<BR>It uses digital terrain information and a mathematical model to simulate radio transmissions between two fixed sites (radio link) or between a fixed site and a mobile (Radio coverage). 
+<BR>The digital terrain information comprises two databases: Elevation and land cover. Those databases are located on the server and represent a total of 198 GigaBytes.
+<BR>Radio Mobile is a popular tool for RF studies. Between 2012 and 2015 663304 studies have been performed and 26198 accounts have been made. More information? Follow this link: RMW Online popularity.
 <BR>
 <BR>Di seguito la reportistica per IR8AI Trevico 10W EIRP , IR8E Monte Tuoro 10W EIRP , Radio Prefettura 50W TX.
 <BR>  
