--- a/index.html
+++ b/index.html
@@ -95,10 +95,10 @@
 
 <CENTER><H1><A NAME="Secondo"></A>Capitolo Secondo - Verifica collegamenti Ripetitori attivi - COM </H1></CENTER>
    
-<BR>Allo scopo di verificare in maniera teorica i rusultati dei collegamenti realizzabili tra i Ripetitori attivi e le sale radio COM , si è provveduto a realizzare una serie 
+<BR>Allo scopo di verificare in maniera teorica le performance dei collegamenti realizzabili tra i Ripetitori attivi e le sale radio COM , si è provveduto ad effettuare una serie 
 <BR>di simulazioni attraverso la predetta piattaforma Radio Mobile on line by VE2DBE 
 <BR> 
-<BR> le seguenti sono riferite al Ripetitore IR8E di Monte Tuoro 
+<BR> Le seguenti sono riferite al Ripetitore IR8E di Monte Tuoro : 
 <BR> 
 <BR><a href="https://mimmogh.github.io/Hirpinia-VHF-Radio-Network/Link COM - Ripetitori/IR8E/C.O.M. n. 12 Mercogliano/Radio Mobile Online.pdf" title="IR8E/C.O.M. n. 12 Mercogliano">IR8E/C.O.M. n. 12 Mercogliano</a>
 <BR>
