--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 <BR>
 <BR><a href="https://mimmogh.github.io/Hirpinia-VHF-Radio-Network/Link COM - Ripetitori/IR8E/C.O.M. n. 11 Lauro/Radio Mobile Online.pdf" title="C.O.M. n. 11 Lauro">IR8E/C.O.M. n. 11 Lauro</a>         
 <BR>
-<BR>
+<BR><a href="https://mimmogh.github.io/Hirpinia-VHF-Radio-Network/Link COM - Ripetitori/IR8E/C.O.M. n. 18 Serino/Radio Mobile Online.pdf" title="C.O.M. n. 18 Serino">IR8E/C.O.M. n. 18 Serino</a>
 <BR>
 <HR WIDTH="100%">
 
