--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </HEAD>
 <BODY BACKGROUND="titto_green_paper.jpg">
 
-<CENTER><H1><A NAME="titolo"></A>Studio Sottorete VHF Prefettura AV - n.20 COM Provincia di Avellino 26/06/2020</H1></CENTER>
+<CENTER><H1><A NAME="titolo"></A>Studio teorico Sottorete VHF Prefettura AV - n.20 COM Provincia di Avellino 26/06/2020</H1></CENTER>
 
 <CENTER><H1><A NAME="Indice"></A>Indice</H1></CENTER>
 
@@ -13,8 +13,8 @@
 <HR WIDTH="100%">
 <UL>
   <LI><A HREF="#intro">Introduzione</A></LI>
-  <LI><A HREF="#Primo">Capitolo Primo - Coperture Ripetitori Attivi e Sala Radio Prefettura</A></LI>
-  <LI><A HREF="#Secondo">Capitolo Secondo - Verifica collegamenti Ripetitori attivi - COM</A></LI>
+  <LI><A HREF="#Primo">Capitolo Primo - Coperture teoriche dei Ripetitori Attivi e della Sala Radio Prefettura</A></LI>
+  <LI><A HREF="#Secondo">Capitolo Secondo - Verifica Performance teoriche dei collegamenti Ripetitori attivi - COM</A></LI>
   <LI><A HREF="#Terzo">Capitolo Terzo</A></LI>
   <LI><A HREF="#Analitico">Indice Analitico</A></LI>
 </UL>
@@ -66,7 +66,7 @@
 <BR>
 <HR WIDTH="100%">
 
-<CENTER><H1><A NAME="Primo"></A>Capitolo Primo - Coperture Ripetitori Attivi e Sala Radio Prefettura</H1></CENTER>
+<CENTER><H1><A NAME="Primo"></A>Capitolo Primo - Coperture teoriche dei Ripetitori Attivi e della Sala Radio Prefettura</H1></CENTER>
 <BR>
 <BR>Allo scopo di evidenziare eventuali criticità relative alla coperture dei territori sedi dei COM da parte dei Ripetitori attivi , si è provveduto a realizzare una serie 
 <BR>di verifiche teoriche attraverso la piattaforma Radio Mobile on line by VE2DBE 
@@ -93,7 +93,7 @@
 <BR>
 <HR WIDTH="100%">
 
-<CENTER><H1><A NAME="Secondo"></A>Capitolo Secondo - Verifica collegamenti Ripetitori attivi - COM </H1></CENTER>
+<CENTER><H1><A NAME="Secondo"></A>Capitolo Secondo - Verifica Performance teoriche dei collegamenti Ripetitori attivi - COM</H1></CENTER>
    
 <BR>Allo scopo di verificare in maniera teorica le performance dei collegamenti realizzabili tra i Ripetitori attivi e le sale radio COM , si è provveduto ad effettuare una serie 
 <BR>di simulazioni attraverso la predetta piattaforma Radio Mobile on line by VE2DBE 
