--- a/index.html
+++ b/index.html
@@ -132,8 +132,13 @@
 
 <CENTER><H1><A NAME="Terzo"></A>Capitolo Terzo</H1></CENTER>
     Bla bla bla bla bla bla bla bla
-<BR>bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla
-<BR>bla bla bla bla bla bla bla bla bla bla bla
+<BR>I collegamenti tra ponte radio e COM può essere schematizzato mediante lo schema a blocchi della figura 1.
+<BR>
+<BR>
+<BR>
+<BR><img src="immagini/spazio libero.PNG">
+<BR>
+<BR>
 <BR>bla bla bla bla bla bla bla bla bla bla bla bla bla bla
 <BR>bla
     <A NAME="parola_chiave_6"></A>
