--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 <BR>
 <BR>
 <BR>
-img src="immagini/spazio libero.jpg"
+<img src=”immagini/spazio libero.jpg” align=”center” />
 <BR>
 <BR>
 <BR>bla bla bla bla bla bla bla bla bla bla bla bla bla bla
