--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 <BR>
 <BR>
 <BR>
-<img src=”immagini/spazio libero.jpg” align=”center” />
+<img src=”"https://mimmogh.github.io/Hirpinia-VHF-Radio-Network/immagini/spazio libero.jpg” align=”center” />
 <BR>
 <BR>
 <BR>bla bla bla bla bla bla bla bla bla bla bla bla bla bla
