--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 <BR>
 <BR>
 <BR>
-<BR><img src=”"https://mimmogh.github.io/Hirpinia-VHF-Radio-Network/immagini/spazio libero.jpg” align=”center” />
+<BR>![alt text](https://mimmogh.github.io/Hirpinia-VHF-Radio-Network/to/img.png)
 <BR>
 <BR>
 <BR>bla bla bla bla bla bla bla bla bla bla bla bla bla bla
