--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 <BR>
 <BR>
 <BR>
-![alt text](https://mimmogh.github.io/Hirpinia-VHF-Radio-Network/immagini/to/img.png)
+<img src="immagini/spaziolibero.jpg">
 <BR>
 <BR>
 <BR>bla bla bla bla bla bla bla bla bla bla bla bla bla bla
