--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 <BR>
 <BR>
 <BR>
-<img src="spaziolibero.jpg">
+<img src="https://miosito.it/miaImmagine.png" alt="Mia Immagine">
 <BR>
 <BR>
 <BR>bla bla bla bla bla bla bla bla bla bla bla bla bla bla
