--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 <BR>
 <BR>
 <BR>
-<img src="https://miosito.it/miaImmagine.png" alt="Mia Immagine">
+<img src="https://github.com/MimmoGH/Hirpinia-VHF-Radio-Network/blob/master/Immagini/spaziolibero.jpg" alt="Mia Immagine">
 <BR>
 <BR>
 <BR>bla bla bla bla bla bla bla bla bla bla bla bla bla bla
