--- a/index.html
+++ b/index.html
@@ -136,8 +136,11 @@
 <BR>
 <BR>
 <BR>
-<img src="spaziolibero.jpg" alt="Mia Immagine">
-<BR>
+<img src="blocchi.PNG" alt="">
+<img src="spaziolibero.jpg" alt="">
+<img src="Propagation.PNG" alt="">
+<img src="Performance.PNG" alt="">
+<img src="SistemaRadio.PNG" alt="">
 <BR>
 <BR>bla bla bla bla bla bla bla bla bla bla bla bla bla bla
 <BR>bla
