--- a/index.html
+++ b/index.html
@@ -131,16 +131,29 @@
 <HR WIDTH="100%">
 
 <CENTER><H1><A NAME="Terzo"></A>Capitolo Terzo</H1></CENTER>
-    Bla bla bla bla bla bla bla bla
+<BR>
+<BR> 
 <BR>I collegamenti tra ponte radio e COM può essere schematizzato mediante lo schema a blocchi della figura 1.
 <BR>
-<BR>
-<BR>
 <img src="blocchi.PNG" alt="">
-<img src="spaziolibero.jpg" alt="">
-<img src="Propagation.PNG" alt="">
-<img src="Performance.PNG" alt="">
+<BR>
+<BR>I parametri che permettono di verificare le performance del collegamento sono:
+<BR>
 <img src="SistemaRadio.PNG" alt="">
+<BR>
+<img src="Propagation.PNG" alt="">
+<BR> 
+<BR>- PT (dBm) la potenza TX emessa dal trasmettitore (TX potenza);
+<BR>- le attenuazioni AF (Tx) introdotte dai cavi e dei componenti della linea di trasmissione (TX perdite cavi, ecc.); 
+<BR>- il guadagno GT  dell’antenna trasmittente (TX guadagno antenna);
+<BR>- l’attenuazione ASL dello spazio libero che dipende dalla lunghezza della tratta d e dalla frequenza di trasmissione f  secondo la relazione:
+<BR>
+<img src="spaziolibero.jpg" alt="">
+<BR> 
+<BR>-	l’attenuazione AP = AO (ostacoli) + AA (alberi) + AE (edifici) + AS (statistica)  (valori ricavati da RM dalle mappe)
+<BR>
+<img src="Performance.PNG" alt="">
+<BR>
 <BR>
 <BR>bla bla bla bla bla bla bla bla bla bla bla bla bla bla
 <BR>bla
