--- a/index.html
+++ b/index.html
@@ -151,7 +151,14 @@
 <img src="spaziolibero.jpg" alt="">
 <BR> 
 <BR>-	l’attenuazione AP = AO (ostacoli) + AA (alberi) + AE (edifici) + AS (statistica)  (valori ricavati da RM dalle mappe)
+<BR>- il guadagno GR  dell’antenna ricevente (RX guadagno antenna);
+<BR>- l’attenuazione AF (Rx) del cavo d’antenna che collega l’antenna ricevente con il ricevitore (RX perdite cavi, ecc.); 
 <BR>
+<BR>La potenza equivalente isotropica irradiata risulta  EIRP (dBm) = PT (dBm) + GT (dB) - AF(Tx) (dB)
+<BR>In Watt  EIRP dbW = 1/1000 * 10^(EIRP/10)
+<BR> 
+<BR>Il Segnale Ricevuto risulta PR (dBm)= PT (dBm) - AF (Tx) (dBm) + GT (dB) - ASL(dBm) – AP (dBm) + GR (dB) - AF (Rx) (dBm) 
+<BR>   
 <img src="Performance.PNG" alt="">
 <BR>
 <BR>
