--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 <BR> 
 <BR>I collegamenti tra ponte radio e COM può essere schematizzato mediante lo schema a blocchi della figura 1.
 <BR>
-<img src="blocchi.PNG" alt="">
+<BR><img src="blocchi.PNG" alt="">
 <BR>
 <BR>I parametri che permettono di verificare le performance del collegamento sono:
 <BR>
