--- a/index.html
+++ b/index.html
@@ -139,16 +139,16 @@
 <BR>
 <BR>I parametri che permettono di verificare le performance del collegamento sono:
 <BR>
-<img src="SistemaRadio.PNG" alt="">
+<BR><img src="SistemaRadio.PNG" alt="">
 <BR>
-<img src="Propagation.PNG" alt="">
+<BR><img src="Propagation.PNG" alt="">
 <BR> 
 <BR>- PT (dBm) la potenza TX emessa dal trasmettitore (TX potenza);
 <BR>- le attenuazioni AF (Tx) introdotte dai cavi e dei componenti della linea di trasmissione (TX perdite cavi, ecc.); 
 <BR>- il guadagno GT  dell’antenna trasmittente (TX guadagno antenna);
 <BR>- l’attenuazione ASL dello spazio libero che dipende dalla lunghezza della tratta d e dalla frequenza di trasmissione f  secondo la relazione:
 <BR>
-<img src="spaziolibero.jpg" alt="">
+<BR><img src="spaziolibero.jpg" alt="">
 <BR> 
 <BR>-	l’attenuazione AP = AO (ostacoli) + AA (alberi) + AE (edifici) + AS (statistica)  (valori ricavati da RM dalle mappe)
 <BR>- il guadagno GR  dell’antenna ricevente (RX guadagno antenna);
@@ -160,7 +160,7 @@
 <BR>Il Segnale Ricevuto risulta PR (dBm)= PT (dBm) - AF (Tx) (dBm) + GT (dB) - ASL(dBm) – AP (dBm) + GR (dB) - AF (Rx) (dBm) 
 <BR>
 <BR>   
-<img src="Performance.PNG" alt="">
+<BR><img src="Performance.PNG" alt="">
 <BR>
 <BR>   
 <P>(<I>torna all'<A HREF="#Indice">indice</A></I>)
