--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@
 <BR>
 <BR>Alcuni COM riportati in una mappa di Google.....
 <BR>
+<BR><img src="Cattura.PNG" alt=""> 
+   
+<BR>
 <BR>(<I>torna all'<A HREF="#Indice">indice</A></I>)
 <BR>
 <HR WIDTH="100%">
