--- a/index.html
+++ b/index.html
@@ -62,8 +62,10 @@
 <BR>
 <BR>Alcuni COM riportati in una mappa di Google.....
 <BR>
+<BR>
+<BR> .
 <BR><img src="Cattura.PNG" alt=""> 
-   
+<BR>Copertura IR8E riportata in Google Earth (particolare - siti S.Stefano del Sole , S.Lucia di Serino ....)
 <BR>
 <BR>(<I>torna all'<A HREF="#Indice">indice</A></I>)
 <BR>
