--- a/index.html
+++ b/index.html
@@ -162,12 +162,16 @@
 <BR>La potenza equivalente isotropica irradiata risulta  EIRP (dBm) = PT (dBm) + GT (dB) - AF(Tx) (dB)
 <BR>In Watt  EIRP dbW = 1/1000 * 10^(EIRP/10)
 <BR> 
-<BR>Il Segnale Ricevuto risulta PR (dBm)= PT (dBm) - AF (Tx) (dBm) + GT (dB) - ASL(dBm) – AP (dBm) + GR (dB) - AF (Rx) (dBm) 
+<BR>Il Segnale Ricevuto risulta PR (dBm)= PT (dBm) - AF (Tx) (dBm) + GT (dB) - ASL(dBm) – AP (dBm) + GR (dB) - AF (Rx) (dBm)
+<BR> 
+<BR>Il segnale ricevuto in microvolts = 10 ^ (dBm + 107)/20 
 <BR>
 <BR>   
 <BR><img src="Performance.PNG" alt="">
 <BR>
 <BR>   
+<BR>
+<BR>    
 <P>(<I>torna all'<A HREF="#Indice">indice</A></I>)
 <BR>
 </BODY>
