--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 <BR>
 <HR WIDTH="100%">
 
-<CENTER><H1><A NAME="Terzo"></A>Capitolo Terzo - Verifiche di Performance del collegamento pin to pin - Dati caratteristici della Stazione trasmittente e ricevente - Attenuazioni in spazio libero e da ostacoli - Risultati</H1></CENTER>
+<CENTER><H1><A NAME="Terzo"></A>Capitolo Terzo - Verifiche di Performance del collegamento Ripetitore - COM - Dati caratteristici della Stazione trasmittente e ricevente - Attenuazioni in spazio libero e da ostacoli - Risultati</H1></CENTER>
 <BR>
 <BR> 
 <BR>I collegamenti tra ponte radio e COM può essere schematizzato mediante lo schema a blocchi della figura 1.
