--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <LI><A HREF="#intro">Introduzione</A></LI>
   <LI><A HREF="#Primo">Capitolo Primo - Coperture teoriche dei Ripetitori Attivi e della Sala Radio Prefettura</A></LI>
   <LI><A HREF="#Secondo">Capitolo Secondo - Verifica Performance teoriche dei collegamenti Ripetitori attivi - COM</A></LI>
-  <LI><A HREF="#Terzo">Capitolo Terzo</A></LI>
+  <LI><A HREF="#Terzo">Capitolo Terzo - Verifiche di Performance del collegamento Ripetitore - COM - Dati caratteristici della Stazione trasmittente e ricevente - Attenuazioni in spazio libero e da ostacoli - Risultati</A></LI>
   <LI><A HREF="#Analitico">Indice Analitico</A></LI>
 </UL>
 
