--- a/index.html
+++ b/index.html
@@ -134,6 +134,38 @@
 <BR><a href="https://mimmogh.github.io/Hirpinia-VHF-Radio-Network/Link COM - Ripetitori/IR8E/C.O.M. n. 18 Serino/Radio Mobile Online.pdf" title="C.O.M. n. 18 Serino">IR8E/C.O.M. n. 18 Serino</a>
 <BR>
 <HR WIDTH="100%">
+   
+<BR>Le seguenti sono riferite al Ripetitore IR8AI Trevico : 
+<BR> 
+<BR><a href="https://mimmogh.github.io/Hirpinia-VHF-Radio-Network/Link COM - Ripetitori/IR8AI/C.O.M. n. 12 Mercogliano/Radio Mobile Online.pdf" title="C.O.M. n. 12 Mercogliano">IR8AI/C.O.M. n. 12 Mercogliano</a>
+<BR>
+<BR><a href="https://mimmogh.github.io/Hirpinia-VHF-Radio-Network/Link COM - Ripetitori/IR8AI/C.O.M. n. 13 Mirabella Eclano/Radio Mobile Online.pdf" title="C.O.M. n. 13 Mirabella Eclano">IR8AI/C.O.M. n. 13 Mirabella Eclano</a>
+<BR>
+<BR><a href="https://mimmogh.github.io/Hirpinia-VHF-Radio-Network/Link COM - Ripetitori/IR8AI/C.O.M. n. 14 Montella/Radio Mobile Online.pdf" title="C.O.M. n. 14 Montella">IR8AI/C.O.M. n. 14 Montella</a>
+<BR>
+<BR><a href="https://mimmogh.github.io/Hirpinia-VHF-Radio-Network/Link COM - Ripetitori/IR8AI/C.O.M. n. 16 San Mango sul Calore/Radio Mobile Online.pdf" title="C.O.M. n. 16 San Mango sul Calore">IR8AI/C.O.M. n. 16 San Mango sul Calore</a>    
+<BR>
+<BR><a href="https://mimmogh.github.io/Hirpinia-VHF-Radio-Network/Link COM - Ripetitori/IR8AI/C.O.M. n. 17 Sant’Angelo dei Lombardi/Radio Mobile Online.pdf" title="C.O.M. n. 17 Sant’Angelo dei Lombardi">IR8AI/C.O.M. n. 17 Sant’Angelo dei Lombardi</a>
+<BR>
+<BR><a href="https://mimmogh.github.io/Hirpinia-VHF-Radio-Network/Link COM - Ripetitori/IR8AI/C.O.M. n. 19 Solofra/Radio Mobile Online.pdf" title="C.O.M. n. 19 Solofra">IR8AI/C.O.M. n. 19 Solofra</a>   
+<BR>
+<BR><a href="https://mimmogh.github.io/Hirpinia-VHF-Radio-Network/Link COM - Ripetitori/IR8AI/C.O.M. n. 2 Ariano Irpino/Radio Mobile Online.pdf" title="C.O.M. n. 2 Ariano Irpino">IR8AI/C.O.M. n. 2 Ariano Irpino</a>   
+<BR>
+<BR><a href="https://mimmogh.github.io/Hirpinia-VHF-Radio-Network/Link COM - Ripetitori/IR8AI/C.O.M. n. 4 Avellino/Radio Mobile Online.pdf" title="C.O.M. n. 4 Avellino">IR8AI/C.O.M. n. 4 Avellino</a> 
+<BR>
+<BR><a href="https://mimmogh.github.io/Hirpinia-VHF-Radio-Network/Link COM - Ripetitori/IR8AI/C.O.M. n. 6 Calitri/Radio Mobile Online.pdf" title="C.O.M. n. 6 Calitri">IR8AI/C.O.M. n. 6 Calitri</a>    
+<BR>
+<BR><a href="https://mimmogh.github.io/Hirpinia-VHF-Radio-Network/Link COM - Ripetitori/IR8AI/C.O.M. n. 8 Cervinara/Radio Mobile Online.pdf" title="C.O.M. n. 8 Cervinara">IR8AI/C.O.M. n. 8 Cervinara</a> 
+<BR>
+<BR><a href="https://mimmogh.github.io/Hirpinia-VHF-Radio-Network/Link COM - Ripetitori/IR8AI/COM Prefettura da IR8E/Radio Mobile Online.pdf" title="COM Prefettura da IR8E">IR8AI/COM Prefettura da IR8E</a> 
+<BR>
+<BR><a href="https://mimmogh.github.io/Hirpinia-VHF-Radio-Network/Link COM - Ripetitori/IR8AI/C.O.M. n. 15 Montemiletto/Radio Mobile Online.pdf" title="C.O.M. n. 15 Montemiletto">IR8AI/C.O.M. n. 15 Montemiletto</a> 
+<BR>
+<BR><a href="https://mimmogh.github.io/Hirpinia-VHF-Radio-Network/Link COM - Ripetitori/IR8AI/C.O.M. n. 11 Lauro/Radio Mobile Online.pdf" title="C.O.M. n. 11 Lauro">IR8AI/C.O.M. n. 11 Lauro</a>         
+<BR>
+<BR><a href="https://mimmogh.github.io/Hirpinia-VHF-Radio-Network/Link COM - Ripetitori/IR8AI/C.O.M. n. 18 Serino/Radio Mobile Online.pdf" title="C.O.M. n. 18 Serino">IR8AI/C.O.M. n. 18 Serino</a>
+<BR>
+<HR WIDTH="100%">
 
 <CENTER><H1><A NAME="Terzo"></A>Capitolo Terzo - Verifiche di Performance del collegamento Ripetitore - COM - Dati caratteristici della Stazione trasmittente e ricevente - Attenuazioni in spazio libero e da ostacoli - Risultati</H1></CENTER>
 <BR>
