--- a/index.html
+++ b/index.html
@@ -134,7 +134,10 @@
 <BR><a href="https://mimmogh.github.io/Hirpinia-VHF-Radio-Network/Link COM - Ripetitori/IR8E/C.O.M. n. 18 Serino/Radio Mobile Online.pdf" title="C.O.M. n. 18 Serino">IR8E/C.O.M. n. 18 Serino</a>
 <BR>
 <HR WIDTH="100%">
-   
+<P>(<I>torna all'<A HREF="#Indice">indice</A></I>)
+<BR>
+</BODY>
+</HTML>
 <BR>Le seguenti sono riferite al Ripetitore IR8AI Trevico : 
 <BR> 
 <BR><a href="https://mimmogh.github.io/Hirpinia-VHF-Radio-Network/Link COM - Ripetitori/IR8AI/C.O.M. n. 12 Mercogliano/Radio Mobile Online.pdf" title="C.O.M. n. 12 Mercogliano">IR8AI/C.O.M. n. 12 Mercogliano</a>
@@ -166,7 +169,10 @@
 <BR><a href="https://mimmogh.github.io/Hirpinia-VHF-Radio-Network/Link COM - Ripetitori/IR8AI/C.O.M. n. 18 Serino/Radio Mobile Online.pdf" title="C.O.M. n. 18 Serino">IR8AI/C.O.M. n. 18 Serino</a>
 <BR>
 <HR WIDTH="100%">
-
+<P>(<I>torna all'<A HREF="#Indice">indice</A></I>)
+<BR>
+</BODY>
+</HTML>
 <CENTER><H1><A NAME="Terzo"></A>Capitolo Terzo - Verifiche di Performance del collegamento Ripetitore - COM - Dati caratteristici della Stazione trasmittente e ricevente - Attenuazioni in spazio libero e da ostacoli - Risultati</H1></CENTER>
 <BR>
 <BR> 
