--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 <BR>
 <BR><iframe src="https://www.google.com/maps/d/u/0/embed?mid=1ePpS04y813t0qOghG_SjbrIr7vQK9HEK" width="640" height="480"></iframe>
 <BR>
-<BR>Alcuni COM riportati in una mappa di Google.....
+<BR><span style="font-size:12px"> Alcuni COM riportati in una mappa di Google..... </span>
 <BR>
 <BR>
 <BR> .
