--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
   <LI><A HREF="#Terzo">Capitolo Terzo - Verifiche di Performance del collegamento Ripetitore - COM - Dati caratteristici della Stazione trasmittente e ricevente - Attenuazioni in spazio libero e da ostacoli - Risultati</A></LI>
   <LI><A HREF="#Analitico">Indice Analitico</A></LI>
 </UL>
-
+   
 <HR WIDTH="100%">
 
 <CENTER><H1><A NAME="intro"></A>Introduzione</H1></CENTER>
-    La Prefettura di Avellino Ufficio Territoriale del Governo Area V – Protezione Civile Difesa Civile e Coordinamento del Soccorso Pubblico
-<BR>decretava il 18 gennaio 2012 con Circolare Prefettizia n.1039/2012 l'istituzione dei seguenti centri operativi misti:
+<BR><span style="font-size:16px"> La Prefettura di Avellino Ufficio Territoriale del Governo Area V – Protezione Civile Difesa Civile e Coordinamento del Soccorso Pubblico
+<BR>decretava il 18 gennaio 2012 con Circolare Prefettizia n.1039/2012 l'istituzione dei seguenti centri operativi misti:</span>
 <BR>
 <BR>   C.O.M. n. 1 Altavilla Irpina
 <BR>   C.O.M. n. 2 Ariano Irpino
@@ -46,7 +46,7 @@
 <BR>   C.O.M. n. 19 Solofra
 <BR>   C.O.M. n. 20 Vallata
 <BR>
-<BR> Si riportano la Circolare Prefettizia n.1039/2012, l'allegato della Circolare con articolazione COM/COC e relativa mappa provinciale.
+<BR> <span style="font-size:16px"> Si riportano la Circolare Prefettizia n.1039/2012, l'allegato della Circolare con articolazione COM/COC e relativa mappa provinciale.</span>
 <BR>
 <BR>
 <BR><a href="http://93.57.71.19/AREA_DOC_PROT_CIV/ARCHIVIO/decreto-nuovi-com.pdf" title="Decreto Prot. n.1039/2012 - 18 gennaio 2012 ">Decreto Prot. n.1039/2012 - 18 gennaio 2012</a>
@@ -60,12 +60,12 @@
 <BR>
 <BR><iframe src="https://www.google.com/maps/d/u/0/embed?mid=1ePpS04y813t0qOghG_SjbrIr7vQK9HEK" width="640" height="480"></iframe>
 <BR>
-<BR><span style="font-size:22px"> Alcuni COM riportati in una mappa di Google..... </span>
+<BR><span style="font-size:16px"> Alcuni COM riportati in una mappa di Google..... </span>
 <BR>
 <BR>
 <BR> .
 <BR><img src="Cattura.PNG" alt=""> 
-<BR>Copertura IR8E riportata in Google Earth (particolare - siti S.Stefano del Sole , S.Lucia di Serino ....)
+<BR><span style="font-size:16px"> Copertura IR8E riportata in Google Earth (particolare - siti S.Stefano del Sole , S.Lucia di Serino ....) </span>
 <BR>
 <BR>(<I>torna all'<A HREF="#Indice">indice</A></I>)
 <BR>
@@ -73,8 +73,8 @@
 
 <CENTER><H1><A NAME="Primo"></A>Capitolo Primo - Coperture teoriche dei Ripetitori Attivi e della Sala Radio Prefettura</H1></CENTER>
 <BR>
-<BR>Allo scopo di evidenziare eventuali criticità relative alla coperture dei territori sedi dei COM da parte dei Ripetitori attivi , si è provveduto a realizzare una serie 
-<BR>di verifiche teoriche attraverso la piattaforma Radio Mobile on line by VE2DBE 
+<BR><span style="font-size:16px"> Allo scopo di evidenziare eventuali criticità relative alla coperture dei territori sedi dei COM da parte dei Ripetitori attivi , si è provveduto a realizzare una serie 
+<BR>di verifiche teoriche attraverso la piattaforma Radio Mobile on line by VE2DBE </span>
 <BR>
 <BR><a href="https://www.ve2dbe.com/rmonline_s.asp" title="Radio Mobile Online" title="Radio Mobile Online">Radio Mobile Online</a>
 <BR>    
@@ -83,7 +83,7 @@
 <BR>The digital terrain information comprises two databases: Elevation and land cover. Those databases are located on the server and represent a total of 198 GigaBytes.
 <BR>Radio Mobile is a popular tool for RF studies. Between 2012 and 2015 663304 studies have been performed and 26198 accounts have been made. More information? Follow this link: RMW Online popularity.
 <BR>
-<BR>Di seguito la reportistica per IR8AI Trevico 10W EIRP , IR8E Monte Tuoro 10W EIRP , Radio Prefettura 50W TX.
+<BR><span style="font-size:16px"> Di seguito la reportistica per IR8AI Trevico 10W EIRP , IR8E Monte Tuoro 10W EIRP , Radio Prefettura 50W TX. </span>
 <BR>  
 <BR> 
 <BR>
