--- a/index.html
+++ b/index.html
@@ -100,10 +100,10 @@
 
 <CENTER><H1><A NAME="Secondo"></A>Capitolo Secondo - Verifica Performance teoriche dei collegamenti Ripetitori attivi - COM</H1></CENTER>
    
-<BR>Allo scopo di verificare in maniera teorica le performance dei collegamenti realizzabili tra i Ripetitori attivi e le sale radio COM , si è provveduto ad effettuare una serie 
+<BR><span style="font-size:18px"> Allo scopo di verificare in maniera teorica le performance dei collegamenti realizzabili tra i Ripetitori attivi e le sale radio COM , si è provveduto ad effettuare una serie 
 <BR>di simulazioni attraverso la predetta piattaforma Radio Mobile on line by VE2DBE 
 <BR> 
-<BR> Le seguenti sono riferite al Ripetitore IR8E di Monte Tuoro : 
+<BR> Le seguenti sono riferite al Ripetitore IR8E di Monte Tuoro : </span>
 <BR> 
 <BR><a href="https://mimmogh.github.io/Hirpinia-VHF-Radio-Network/Link COM - Ripetitori/IR8E/C.O.M. n. 12 Mercogliano/Radio Mobile Online.pdf" title="IR8E/C.O.M. n. 12 Mercogliano">IR8E/C.O.M. n. 12 Mercogliano</a>
 <BR>
@@ -138,7 +138,7 @@
 <BR>
 </BODY>
 </HTML>
-<BR>Le seguenti sono riferite al Ripetitore IR8AI Trevico : 
+<BR><span style="font-size:18px"> Le seguenti sono riferite al Ripetitore IR8AI Trevico :  </span> 
 <BR> 
 <BR><a href="https://mimmogh.github.io/Hirpinia-VHF-Radio-Network/Link COM - Ripetitori/IR8AI/C.O.M. n. 12 Mercogliano/Radio Mobile Online.pdf" title="C.O.M. n. 12 Mercogliano">IR8AI/C.O.M. n. 12 Mercogliano</a>
 <BR>
@@ -176,7 +176,7 @@
 <CENTER><H1><A NAME="Terzo"></A>Capitolo Terzo - Verifiche di Performance del collegamento Ripetitore - COM - Dati caratteristici della Stazione trasmittente e ricevente - Attenuazioni in spazio libero e da ostacoli - Risultati</H1></CENTER>
 <BR>
 <BR> 
-<BR>I collegamenti tra ponte radio e COM può essere schematizzato mediante lo schema a blocchi della figura 1.
+<BR><span style="font-size:18px"> I collegamenti tra ponte radio e COM può essere schematizzato mediante lo schema a blocchi della figura 1.
 <BR>
 <BR><img src="blocchi.PNG" alt="">
 <BR>
@@ -202,7 +202,7 @@
 <BR> 
 <BR>Il Segnale Ricevuto risulta PR (dBm)= PT (dBm) - AF (Tx) (dBm) + GT (dB) - ASL(dBm) – AP (dBm) + GR (dB) - AF (Rx) (dBm)
 <BR> 
-<BR>Il segnale ricevuto in microvolts = 10 ^ (dBm + 107)/20 
+<BR>Il segnale ricevuto in microvolts = 10 ^ (dBm + 107)/20  </span> 
 <BR>
 <BR>   
 <BR><img src="Performance.PNG" alt="">
