--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 
 <CENTER><H1><A NAME="Indice"></A>Indice</H1></CENTER>
 
-
+<span style="font-size:18px">
+   
 <HR WIDTH="100%">
 <UL>
   <LI><A HREF="#intro">Introduzione</A></LI>
@@ -18,7 +19,7 @@
   <LI><A HREF="#Terzo">Capitolo Terzo - Verifiche di Performance del collegamento Ripetitore - COM - Dati caratteristici della Stazione trasmittente e ricevente - Attenuazioni in spazio libero e da ostacoli - Risultati</A></LI>
   <LI><A HREF="#Analitico">Indice Analitico</A></LI>
 </UL>
-   
+   </span>
 <HR WIDTH="100%">
 
 <CENTER><H1><A NAME="intro"></A>Introduzione</H1></CENTER>
