--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 <BR>
 <BR><a href="https://mimmogh.github.io/Hirpinia-VHF-Radio-Network/Link COM - Ripetitori/IR8AI/C.O.M. n. 8 Cervinara/Radio Mobile Online.pdf" title="C.O.M. n. 8 Cervinara">IR8AI/C.O.M. n. 8 Cervinara</a> 
 <BR>
-<BR><a href="https://mimmogh.github.io/Hirpinia-VHF-Radio-Network/Link COM - Ripetitori/IR8E/COM Prefettura da IR8E/Radio Mobile Online.pdf" title="COM Prefettura da IR8E">IR8E/COM Prefettura da IR8E</a>
+<BR><a href="https://mimmogh.github.io/Hirpinia-VHF-Radio-Network/Link COM - Ripetitori/IR8AI/COM Prefettura da IR8E/Radio Mobile Online.pdf" title="COM Prefettura da IR8E">IR8E/COM Prefettura da IR8E</a>
 <BR>
 <BR><a href="https://mimmogh.github.io/Hirpinia-VHF-Radio-Network/Link COM - Ripetitori/IR8AI/C.O.M. n. 15 Montemiletto/Radio Mobile Online.pdf" title="C.O.M. n. 15 Montemiletto">IR8AI/C.O.M. n. 15 Montemiletto</a> 
 <BR>
