--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <LI><A HREF="#intro">Introduzione</A></LI>
   <LI><A HREF="#Primo">Capitolo Primo - Coperture teoriche dei Ripetitori Attivi e della Sala Radio Prefettura</A></LI>
   <LI><A HREF="#Secondo">Capitolo Secondo - Verifica Performance teoriche dei collegamenti Ripetitori attivi - COM</A></LI>
-  <LI><A HREF="#Terzo">Capitolo Terzo - Verifiche di Performance del collegamento Ripetitore - COM - Dati caratteristici della Stazione trasmittente e ricevente - Attenuazioni in spazio libero e da ostacoli - Risultati</A></LI>
+  <LI><A HREF="#Terzo">Capitolo Terzo - Verifiche di Performance del collegamento Ripetitore - COM. Dati caratteristici della Stazione trasmittente e ricevente. Attenuazioni in spazio libero e da ostacoli. Risultati</A></LI>
   <LI><A HREF="#Analitico">Indice Analitico</A></LI>
 </UL>
    </span>
@@ -174,7 +174,7 @@
 <BR>
 </BODY>
 </HTML>
-<CENTER><H1><A NAME="Terzo"></A>Capitolo Terzo - Verifiche di Performance del collegamento Ripetitore - COM - Dati caratteristici della Stazione trasmittente e ricevente - Attenuazioni in spazio libero e da ostacoli - Risultati</H1></CENTER>
+<CENTER><H1><A NAME="Terzo"></A>Capitolo Terzo - Verifiche di Performance del collegamento Ripetitore - COM. Dati caratteristici della Stazione trasmittente e ricevente. Attenuazioni in spazio libero e da ostacoli. Risultati</H1></CENTER>
 <BR>
 <BR> 
 <BR><span style="font-size:18px"> I collegamenti tra ponte radio e COM può essere schematizzato mediante lo schema a blocchi della figura 1.
