--- a/index.html
+++ b/index.html
@@ -133,6 +133,8 @@
 <BR><a href="https://mimmogh.github.io/Hirpinia-VHF-Radio-Network/Link COM - Ripetitori/IR8E/C.O.M. n. 11 Lauro/Radio Mobile Online.pdf" title="C.O.M. n. 11 Lauro">IR8E/C.O.M. n. 11 Lauro</a>         
 <BR>
 <BR><a href="https://mimmogh.github.io/Hirpinia-VHF-Radio-Network/Link COM - Ripetitori/IR8E/C.O.M. n. 18 Serino/Radio Mobile Online.pdf" title="C.O.M. n. 18 Serino">IR8E/C.O.M. n. 18 Serino</a>
+<BR> 
+<BR><a href="https://mimmogh.github.io/Hirpinia-VHF-Radio-Network/Link COM - Ripetitori/IR8E/C.O.M. n. 1 Altavilla Irpina/Radio Mobile Online.pdf" title="IR8E/C.O.M. n. 1 Altavilla Irpina">IR8E/C.O.M. n. 1 Altavilla Irpina</a>
 <BR>
 <HR WIDTH="100%">
 <P>(<I>torna all'<A HREF="#Indice">indice</A></I>)
@@ -168,6 +170,8 @@
 <BR><a href="https://mimmogh.github.io/Hirpinia-VHF-Radio-Network/Link COM - Ripetitori/IR8AI/C.O.M. n. 11 Lauro/Radio Mobile Online.pdf" title="C.O.M. n. 11 Lauro">IR8AI/C.O.M. n. 11 Lauro</a>         
 <BR>
 <BR><a href="https://mimmogh.github.io/Hirpinia-VHF-Radio-Network/Link COM - Ripetitori/IR8AI/C.O.M. n. 18 Serino/Radio Mobile Online.pdf" title="C.O.M. n. 18 Serino">IR8AI/C.O.M. n. 18 Serino</a>
+<BR> 
+<BR><a href="https://mimmogh.github.io/Hirpinia-VHF-Radio-Network/Link COM - Ripetitori/IR8AI/C.O.M. n. 1 Altavilla Irpina/Radio Mobile Online.pdf" title="IR8AI/C.O.M. n. 1 Altavilla Irpina">IR8AI/C.O.M. n. 1 Altavilla Irpina</a>
 <BR>
 <HR WIDTH="100%">
 <P>(<I>torna all'<A HREF="#Indice">indice</A></I>)
