--- a/index.html
+++ b/index.html
@@ -136,6 +136,8 @@
 <BR> 
 <BR><a href="https://mimmogh.github.io/Hirpinia-VHF-Radio-Network/Link COM - Ripetitori/IR8E/C.O.M. n. 1 Altavilla Irpina/Radio Mobile Online.pdf" title="IR8E/C.O.M. n. 1 Altavilla Irpina">IR8E/C.O.M. n. 1 Altavilla Irpina</a>
 <BR>
+<BR><a href="https://mimmogh.github.io/Hirpinia-VHF-Radio-Network/Link COM - Ripetitori/IR8E/C.O.M. n. 10 Lacedonia/Radio Mobile Online.pdf" title="IR8E/C.O.M. n. 10 Lacedonia">IR8E/C.O.M. n. 10 Lacedonia</a>
+<BR>
 <HR WIDTH="100%">
 <P>(<I>torna all'<A HREF="#Indice">indice</A></I>)
 <BR>
@@ -173,6 +175,8 @@
 <BR> 
 <BR><a href="https://mimmogh.github.io/Hirpinia-VHF-Radio-Network/Link COM - Ripetitori/IR8AI/C.O.M. n. 1 Altavilla Irpina/Radio Mobile Online.pdf" title="IR8AI/C.O.M. n. 1 Altavilla Irpina">IR8AI/C.O.M. n. 1 Altavilla Irpina</a>
 <BR>
+<BR>
+<BR><a href="https://mimmogh.github.io/Hirpinia-VHF-Radio-Network/Link COM - Ripetitori/IR8AI/C.O.M. n. 10 Lacedonia/Radio Mobile Online.pdf" title="IR8AI/C.O.M. n. 10 Lacedonia">IR8AI/C.O.M. n. 10 Lacedonia</a>
 <HR WIDTH="100%">
 <P>(<I>torna all'<A HREF="#Indice">indice</A></I>)
 <BR>
