--- a/index.html
+++ b/index.html
@@ -138,6 +138,8 @@
 <BR>
 <BR><a href="https://mimmogh.github.io/Hirpinia-VHF-Radio-Network/Link COM - Ripetitori/IR8E/C.O.M. n. 10 Lacedonia/Radio Mobile Online.pdf" title="IR8E/C.O.M. n. 10 Lacedonia">IR8E/C.O.M. n. 10 Lacedonia</a>
 <BR>
+<BR><a href="https://mimmogh.github.io/Hirpinia-VHF-Radio-Network/Link COM - Ripetitori/IR8E/C.O.M. n. 5 Baiano/Radio Mobile Online.pdf" title="C.O.M. n. 5 Baiano">IR8E/C.O.M. n. 5 Baiano</a>
+<BR>
 <HR WIDTH="100%">
 <P>(<I>torna all'<A HREF="#Indice">indice</A></I>)
 <BR>
@@ -176,6 +178,9 @@
 <BR><a href="https://mimmogh.github.io/Hirpinia-VHF-Radio-Network/Link COM - Ripetitori/IR8AI/C.O.M. n. 1 Altavilla Irpina/Radio Mobile Online.pdf" title="IR8AI/C.O.M. n. 1 Altavilla Irpina">IR8AI/C.O.M. n. 1 Altavilla Irpina</a>
 <BR>
 <BR><a href="https://mimmogh.github.io/Hirpinia-VHF-Radio-Network/Link COM - Ripetitori/IR8AI/C.O.M. n. 10 Lacedonia/Radio Mobile Online.pdf" title="IR8AI/C.O.M. n. 10 Lacedonia">IR8AI/C.O.M. n. 10 Lacedonia</a>
+<BR>
+<BR><a href="https://mimmogh.github.io/Hirpinia-VHF-Radio-Network/Link COM - Ripetitori/IR8AI/C.O.M. n. 5 Baiano/Radio Mobile Online.pdf" title="C.O.M. n. 5 Baiano">IR8AI/C.O.M. n. 5 Baiano</a>
+<BR>
 <HR WIDTH="100%">
 <P>(<I>torna all'<A HREF="#Indice">indice</A></I>)
 <BR>
