--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </HEAD>
 <BODY BACKGROUND="titto_green_paper.jpg">
 
-<CENTER><H1><A NAME="titolo"></A>Studio teorico Sottorete VHF Prefettura AV - n. 20 COM Provincia di Avellino 26/06/2020</H1></CENTER>
+<CENTER><H1><A NAME="titolo"></A>Studio teorico Sottorete Alternativa di Emergenza VHF Prefettura AV - n. 20 COM Provincia di Avellino 26/06/2020</H1></CENTER>
 
 <CENTER><H1><A NAME="Indice"></A>Indice</H1></CENTER>
 
@@ -23,7 +23,7 @@
 <HR WIDTH="100%">
 
 <CENTER><H1><A NAME="intro"></A>Introduzione</H1></CENTER>
-<BR><span style="font-size:18px"> La Prefettura di Avellino Ufficio Territoriale del Governo Area V – Protezione Civile Difesa Civile e Coordinamento del Soccorso Pubblico
+<BR><span style="font-size:18px"> Rete Alternativa di Emergenza - La Prefettura di Avellino Ufficio Territoriale del Governo Area V – Protezione Civile Difesa Civile e Coordinamento del Soccorso Pubblico
 <BR>decretava il 18 gennaio 2012 con Circolare Prefettizia n.1039/2012 l'istituzione dei seguenti centri operativi misti:</span>
 <BR>
 <BR>   C.O.M. n. 1 Altavilla Irpina
@@ -66,7 +66,7 @@
 <BR>
 <BR> .
 <BR><img src="Cattura.PNG" alt=""> 
-<BR><span style="font-size:18px"> Copertura IR8E riportata in Google Earth (particolare - siti S.Stefano del Sole , S.Lucia di Serino ....) </span>
+<BR><span style="font-size:18px"> Esempio Copertura IR8E riportata in Google Earth (particolare - siti S.Stefano del Sole , S.Lucia di Serino ....) </span>
 <BR>
 <BR>(<I>torna all'<A HREF="#Indice">indice</A></I>)
 <BR>
