--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
 <BR>
 <BR>  
 <BR> 
-<BR><img src="Cattura.PNG" alt=""> 
-<BR><span style="font-size:18px"> Esempio Copertura IR8E riportata in Google Earth (particolare - siti S.Stefano del Sole , S.Lucia di Serino ....) </span>
+<BR><img src="IR8AI.PNG" alt=""> 
+<BR><span style="font-size:18px"> Esempio Copertura IR8AI riportata in Google Earth (particolare) </span>
 <BR>
 <BR>(<I>torna all'<A HREF="#Indice">indice</A></I>)
 <BR>
